--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Altug Karakurt
 email: altugkarakurt@gmail.com
 description: ""
-baseurl: "altugkarakurt" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
