--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Altug Karakurt
 email: altugkarakurt@gmail.com
 description: ""
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://altugkarakurt.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
